2003-09-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h (_fileno): Remove prototype.
	(fileno): Likewise.
	(FILENAME_MAX): Define, if needed.
	Don't include <stdio.h>.
	* include/stdio.h (FILENAME_MAX): Protect against
	prior definition.
	(_fileno): Define macro implementation.
	(fileno): Likewise.

2003-09-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/inttypes.h: Include _mingw.h.

2003-09-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__CRT_INLINE): Define.
	* include/ctype.h: Replace 'extern inline' with __CRT_INLINE,
	throughout
	* include/inttypes.h: Likewise.
	* include/math.h: Likewise.
	* include/stdio.h: Likewise.
	* include/stdlib.h: Likewise.
	* include/string.h: Likewise.
	* include/wchar.h: Likewise.
	* include/wctype.h: Likewise.

2003-09-22  Roland Schwingel  <rolandschwingel@users.sourceforge.net>

	* mingwex/dirent.c (_topendir): Allocate enough memory for
	DIR struct in UNICODE case too.

2003-09-15  Earnie Boyd  <earnie@users.sf.net>

	* include/_mingw.h: Increment version to 3.2.
	* Makefile.in: Ditto.

2003-07-03  Earnie Boyd  <earnie@users.sf.net>

	* config.guess, config.sub: Update with versions from ftp.gnu.org.

2003-07-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/trunc.c (trunc): Provide lvalue for memory input constraint. 
	* mingwex/math/truncf.c (truncf): Likewise.
	* mingwex/math/truncl.c (truncl): Likewise.
	* mingwex/math/modff.c (modff): Likewise.
	* mingwex/math/modfl.c (modfl): Likewise.

2003-07-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/search.h: New file.
	* include/stdlib.h: Add comment about qsort, bsearch in
	search.h.
	* test_headers.c: Include search.h.
	* moldname.def.in (lfind, lsearch): Add. 

2003-07-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/process.h (_execv, _execvp, _spawnv, _spawnvp, _execve,
	_execvpe, _spawnve, _spawnvpe, execv, execvp, spawnv, spawnvp,