@@ -1,3 +1,8 @@
+2003-09-29  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdlib.h: Guard non-ISO functions with
+	!__STRICT_ANSI__, throughout.
+
 2003-09-24  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/io.h (_fileno): Remove prototype.
